# algoritms

./: .gitignore  README.md
CMake_libraries/static_lib_example/: CMakeLists.txt  readme.txt
CMake_libraries/static_lib_example/libs/: build.sh
CMake_libraries/static_lib_example/libs/include/logger/: logger.h
CMake_libraries/static_lib_example/libs/source/: logger.cpp
CMake_libraries/static_lib_example/src/: main.cpp
algorithms/linked_lists/: linked_list.cpp
algorithms/recursion/: binary_expo.cpp  factorial.cpp  fibanocci.cpp  first_occurance.cpp  last_occurance.cpp  print_increasing_sequence.cpp  sorted_array_check.cpp
libs/shared/code/: CMakeLists.txt  main.cpp
libs/static/code/: CMakeLists.txt  main.cpp
multithreading/: concurrency.txt  mutex_example.cpp  read_write.cpp  singleton_design.cpp  try_lock.cpp
oops/HDF5/1.14.6/cmake/: hdf5-config.cmake  hdf5-targets-relwithdebinfo.cmake  hdf5-targets.cmake  zlib-targets-relwithdebinfo.cmake
oops/HDF5/1.14.6/include/: H5pubconf.h
oops/HDF5/1.14.6/lib/: libhdf5.310.dylib  libhdf5.settings  libhdf5_cpp.310.0.6.dylib  libhdf5_cpp.310.dylib  libhdf5_hl.310.0.6.dylib  libhdf5_hl.310.dylib  libhdf5_hl_cpp.310.0.6.dylib  libhdf5_hl_cpp.310.dylib  libhdf5_java.310.0.6.dylib  libhdf5_java.310.dylib  libhdf5_tools.310.0.6.dylib  libhdf5_tools.310.dylib
oops/HDF5/1.14.6/lib/pkgconfig/: hdf5.pc  hdf5_cpp.pc  hdf5_hl.pc  hdf5_hl_cpp.pc
oops/HDF5/1.14.6/share/: HDF5_Examples.cmake
oops/HDF5/1.14.6/share/html/: todo.html
oops/HDF5/1.14.6/share/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_5.js  files_7.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_d.js  functions_f.js  variables_12.js  variables_13.js  variables_6.js  variables_8.js  variables_f.js
oops/main/: CMakeLists.txt  int_vector.h5  main.cpp
oops/operator_overloading/: Increment.cpp  advance_overload.cpp  shallow_copy_vs_deep_copy.cpp
shared_lib/: readme.txt
shared_lib/code/: CMakeLists.txt
shared_lib/code/src/: main.cpp
shared_lib/lib/lib/cmake/loggerlib/: logger_targets-noconfig.cmake
shared_lib/third_party_lib/: CMakeLists.txt
shared_lib/third_party_lib/cmake/: loggerConfig.cmake.in
shared_lib/third_party_lib/install/lib/cmake/loggerlib/: loggerConfig.cmake
shared_lib/third_party_lib/logger/include/: logger.h
shared_lib/third_party_lib/src/: logger.cpp
shared_lib_windows/: readme.txt
shared_lib_windows/code/: CMakeLists.txt
shared_lib_windows/code/src/: main.cpp
strings/: strtok_impl.cpp
